integ-tests/tests/snapshots/parser__bad_keys__multi_line3.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[multiline-string-key]: 
  ┌─ multi_line3:1:1
  │
1 │ '''key'''=3
  │ ^^^ multiline keys are not allowed


